# DesiYatra

./: .dockerignore  .env.example  .gitignore  .kaggleignore  Dockerfile  KAGGLE_SUBMISSION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
agents/: __init__.py  main.py
agents/adk_agents/: main.py  orchestrator.py
agents/adk_agents/bargainer/: __init__.py  agent.py  atomic_tools.py  google_stt_voice.py  negotiation_brain.py  streaming_negotiator.py  streaming_voice.py  tools.py  voice_pipeline.py
agents/adk_agents/safety_officer/: __init__.py  agent.py  tools.py
agents/adk_agents/scout/: __init__.py  agent.py  google_maps_grounding_tool.py  google_search_grounding_tool.py  tools.py
agents/adk_agents/shared/: custom_planners.py  types.py
agents/shared/: __init__.py  audio_utils.py  config.py  database.py  firestore_tools.py  init_db.py  init_local_db.py  logger.py  models.py  redis_client.py  streaming_state.py  vector_tools.py
migrations/: 001_create_users_table.sql  002_create_trips_table.sql  003_create_vendors_table.sql  004_create_calls_table.sql  005_create_call_events_table.sql  006_create_market_rates_table.sql  007_create_utility_functions.sql
scripts/: live_test_call.py  setup_gcp.py  setup_vector_search.py
tests/: test_adk_agents.py  test_bargainer.py  test_database.py  test_refactored_agents.py
