[project]
name = "desiyatra-agents"
version = "0.1.0"
description = "AI-powered travel negotiation agent system for India"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "fastapi",
    "uvicorn",
    "websockets",
    "redis",
    "supabase",
    "twilio",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "loguru",
    "tenacity",
    "beautifulsoup4",
    "lxml",
    "phonenumbers",
    "psycopg2-binary",
    "google-cloud-bigquery",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [".", "tests"]
python_files = "test_*.py"
markers = [
    "asyncio: marks tests as asyncio (deselect with '-m \"not asyncio\"')",
]

